# aiyo

./: .gitignore  README.md  partitions.csv  partitions.csv.bak  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  CMakeLists.txt.bak  http_web.c  idf_component.yml  tflm.cc  tflm.h
main/web_content/: index_ecm.html  index_http.html  index_socket.html
main/yolov8_nano/: app.py  train_esp32.py
main/yolov8_nano/templates/: index.html
main/yolov8_nano/templates/coco8/: data.yaml
main/yolov8_nano/templates/coco8/labels/: val.cache
